@@ -1,18 +1,0 @@
-$ModLoad imuxsock # provides support for local system logging
-
-$ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
-
-$RepeatedMsgReduction on
-
-$FileOwner syslog
-$FileGroup adm
-$FileCreateMode 0640
-$DirCreateMode 0755
-$Umask 0022
-$PrivDropToUser syslog
-$PrivDropToGroup syslog
-
-$WorkDirectory /var/spool/rsyslog
-
-$IncludeConfig /etc/rsyslog.d/*.conf
-
