@@ -1,11 +1,0 @@
-[program:logrotate]
-command=%(ENV_SERVICE_LOGROTATE_CMD)s
-user=root
-autostart=true
-autorestart=unexpected
-startsecs=1
-priority=990
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/fd/2
-stderr_logfile_maxbytes=0
